welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: ')' expected but '}' found.
for (h<- 0 to () { avance();setCouleurBrosse(tab(h))}}
                                                     ^Array1:8: error: Unmatched closing brace '}' ignored here
}
^Array1:11: error: eof expected but '}' found.
}
^